--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
 	</head>
 	<body>
 		<div class="feedReader">
-			<div class="feedPanel">
-					<div class="feedHeader" id="head1">
+			<div class="feedPanel pan1">
+					<div class="feedHeader">
 					Hyperbate
 				</div>
-				<div class="feedContent" id="pan1" name="http://www.hyperbate.com/dernier/?feed=rss2"></div>
+				<div class="feedContent" name="http://www.hyperbate.com/dernier/?feed=rss2"></div>
 			</div>
-			<div class="feedPanel">
-					<div class="feedHeader" id="head2">
+			<div class="feedPanel pan2">
+					<div class="feedHeader" >
 					Urbain trop urbain
 				</div>
-				<div class="feedContent" id="pan2" name="http://www.urbain-trop-urbain.fr/feed/"></div>
+				<div class="feedContent"  name="http://www.urbain-trop-urbain.fr/feed/"></div>
 			</div>
-			<div class="feedPanel">
-					<div class="feedHeader" id="head1">
+			<div class="feedPanel pan3">
+					<div class="feedHeader" >
 					Réseau en scène
 				</div>
-				<div class="feedContent" id="pan3" name="http://www.reseauenscene.fr/rss-actus.xml"></div>
+				<div class="feedContent" name="http://www.reseauenscene.fr/rss-actus.xml"></div>
 			</div>
-			<div class="feedPanel">
-					<div class="feedHeader" id="head1">
+			<div class="feedPanel pan4">
+					<div class="feedHeader">
 					Pop up urbain
 				</div>
-				<div class="feedContent" id="pan4" name="http://www.pop-up-urbain.com/feed/"></div>
+				<div class="feedContent" name="http://www.pop-up-urbain.com/feed/"></div>
 			</div>
-			<div class="feedPanel">
-					<div class="feedHeader" id="head1">
+			<div class="feedPanel pan1">
+					<div class="feedHeader" >
 					France 24 Science
 				</div>
-				<div class="feedContent" id="pan5" name="http://www.france24.com/fr/sciences/rss"></div>
+				<div class="feedContent" name="http://www.france24.com/fr/sciences/rss"></div>
 			</div>
-			<div class="feedPanel">
-					<div class="feedHeader" id="head1">
+			<div class="feedPanel pan2">
+					<div class="feedHeader" >
 					Creative Applications
 				</div>
-				<div class="feedContent" id="pan6" name="http://feeds.feedburner.com/creativeapplicationsnet"></div>
+				<div class="feedContent" name="http://feeds.feedburner.com/creativeapplicationsnet"></div>
 			</div>
-			<div class="feedPanel">
-					<div class="feedHeader" id="head1">
+			<div class="feedPanel pan3">
+					<div class="feedHeader" >
 					Pasta &amp; Vinegar
 				</div>
-				<div class="feedContent" id="pan7" name="http://feeds.feedburner.com/NicolasNova"></div>
+				<div class="feedContent" name="http://feeds.feedburner.com/NicolasNova"></div>
 			</div>
 		</div>
 		<object id="tuio" type="application/x-tuio">
