--- a/index.html
+++ b/index.html
@@ -10,53 +10,10 @@
 		<title>rrCintamani</title>
 	</head>
 	<body>
-		<div class="feedReader">
-			<div class="feedPanel pan1">
-					<div class="feedHeader">
-					Hyperbate
-				</div>
-				<div class="feedContent" name="http://www.hyperbate.com/dernier/?feed=rss2"></div>
-			</div>
-			<div class="feedPanel pan2">
-					<div class="feedHeader" >
-					Urbain trop urbain
-				</div>
-				<div class="feedContent"  name="http://www.urbain-trop-urbain.fr/feed/"></div>
-			</div>
-			<div class="feedPanel pan3">
-					<div class="feedHeader" >
-					Réseau en scène
-				</div>
-				<div class="feedContent" name="http://www.reseauenscene.fr/rss-actus.xml"></div>
-			</div>
-			<div class="feedPanel pan4">
-					<div class="feedHeader">
-					Pop up urbain
-				</div>
-				<div class="feedContent" name="http://www.pop-up-urbain.com/feed/"></div>
-			</div>
-			<div class="feedPanel pan1">
-					<div class="feedHeader" >
-					France 24 Science
-				</div>
-				<div class="feedContent" name="http://www.france24.com/fr/sciences/rss"></div>
-			</div>
-			<div class="feedPanel pan2">
-					<div class="feedHeader" >
-					Creative Applications
-				</div>
-				<div class="feedContent" name="http://feeds.feedburner.com/creativeapplicationsnet"></div>
-			</div>
-			<div class="feedPanel pan3">
-					<div class="feedHeader" >
-					Pasta &amp; Vinegar
-				</div>
-				<div class="feedContent" name="http://feeds.feedburner.com/NicolasNova"></div>
-			</div>
+		<div class="feedReader" url="opml/opml.xml" >			
 		</div>
 		<object id="tuio" type="application/x-tuio">
 			Plugin FAILED to load
 		</object>
-	</body>	
-	
+	</body>
 </html>
