--- a/parquartier.html
+++ b/parquartier.html
@@ -10,49 +10,7 @@
 		<title>rrCintamani</title>
 	</head>
 	<body>
-		<div class="feedReader">
-			<div class="feedPanel">
-				<div class="feedHeader" id="head1">
-					Montpellier Centre
-				</div>
-				<div class="feedContent" id="pan1" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=1"></div>
-			</div>
-			<div class="feedPanel">
-				<div class="feedHeader" id="head2">
-					Hôpitaux - Facultés
-				</div>
-				<div class="feedContent" id="pan2" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=2"></div>
-			</div>
-			<div class="feedPanel">
-				<div class="feedHeader" id="head3">
-					Mosson
-				</div>
-				<div class="feedContent" id="pan3" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=3"></div>
-			</div>
-			<div class="feedPanel">
-				<div class="feedHeader" id="head4">
-					Les Cévennes
-				</div>
-				<div class="feedContent" id="pan4" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=4"></div>
-			</div>
-			<div class="feedPanel">
-				<div class="feedHeader" id="head5">
-					Croix d'Argent
-				</div>
-				<div class="feedContent" id="pan5" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=5"></div>
-			</div>
-			<div class="feedPanel">
-				<div class="feedHeader" id="head6">
-					Prés d'Arènes
-				</div>
-				<div class="feedContent" id="pan6" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=6"></div>
-			</div>
-			<div class="feedPanel">
-				<div class="feedHeader" id="head7">
-					Port Marianne
-				</div>
-				<div class="feedContent" id="pan7" name="http://www.montpellier.fr/cms_feedAgenda.php?type=QUARTIER&q=7"></div>
-			</div>
+		<div class="feedReader" url="opml/opml_mtp.xml" >			
 		</div>
 		<object id="tuio" type="application/x-tuio">
 			Plugin FAILED to load
