title on the bottom

--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 	<body>
 		<div class="feedReader" url="opml/opml.xml" >			
 		</div>
+		<!--
+		<div class="footerReader">
+		<div class="shelfReader">Ville de Montpellier</div>
+		<div class="shelfReader">Autour de Montpellier</div>
+		<div class="shelfReader shelfReaderAct">Sélection francophone</div>
+		</div>
+		-->
 		<object id="tuio" type="application/x-tuio">
 			Plugin FAILED to load
 		</object>
 	</body>
 </html>
+ 
