--- a/divers.html
+++ b/divers.html
@@ -10,8 +10,7 @@
 		<title>rrCintamani</title>
 	</head>
 	<body>
-		<div class="feedReader" url="opml/opml_divers.xml" >			
-		</div>
+		<div class="feedReader" url="opml/opml_divers.xml"/>			
 		<object id="tuio" type="application/x-tuio">
 			Plugin FAILED to load
 		</object>
