adding endless panorama, fixed width

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 		<title>rrCintamani</title>
 	</head>
 	<body>
-		<div class="feedReader" url="opml/opml.xml" >			
-		</div>
+		<div class="feedReader" url="opml/opml.xml" ></div>
 		<!--
 		<div class="footerReader">
-		<div class="shelfReader">Ville de Montpellier</div>
-		<div class="shelfReader">Autour de Montpellier</div>
-		<div class="shelfReader shelfReaderAct">Sélection francophone</div>
+			<div class="shelfReader">
+				Ville de Montpellier
+			</div>
+			<div class="shelfReader">
+				Autour de Montpellier
+			</div>
+			<div class="shelfReader shelfReaderAct">
+				Sélection francophone
+			</div>
 		</div>
 		-->
 		<object id="tuio" type="application/x-tuio">
@@ -24,4 +29,3 @@
 		</object>
 	</body>
 </html>
- 
